Release notes for Odissea (http://odissea.xtec.cat)

More information on each of the fixes can be found in the project
development home at https://github.com/projectestac/odissea/

Changes 16.02.22
---------------------------------------------------------------------------------------
- Updated all related wiris plugins
- Moved local crons to Moodle tasks
- Updates to prepare for Moodle 3 version
- Updated Local Mobile
- Odissea GTAF Sync: Change remote file deletion and add log and Solve problem changing directories inside ftp

Changes 16.02.01
---------------------------------------------------------------------------------------
- Moodle upgraded to from 2.8.10
- Updated LangPacks
- isEOI is not defined anymore in general Àgora config
- Marsupial: Change context module retrieve only if course is not SITEID
- Agora mailer: Reviewed allowed_environments to put the correct CMO values for DES and INT
- Agora mailer: Change some address errors to warnings
- Updated Local Mobile
- Updated Hotpotatoes module
- Odissea GTAF Sync: Change cron to task, added copy and delete feature and some log
- Added a script to clean temporary tables


Changes 15.12.14
---------------------------------------------------------------------------------------
- Settings: Enable html5 audio and video
- Do not block cache if cacheconfig is not writable
- Marsupial: Solve problem opening activities in a popup from my_books
- Updated LangPacks
- Local Agora:
  - Scripts: Repair undefined variable in filesystem cleanup
  - Scripts: Add script to disable intranet login
- Updated Local Mobile
- Jclic: Changed version numbering method, now the first two numbers are the minimum Moodle required version
- QV: Changed version numbering method, now the first two numbers are the minimum Moodle required version
- Configurable reports: Updated
- Added fist version of Monitor
- Odissea GTAF sync: Solved warnings and deprecations
- Deleted warnings on memcache


Changes 15.11.16